@@ -96,13 +96,17 @@ struct remote_conf
 #define SHARED_PRESV	0x0100
 #define SHARED_UNRESV	0x0200
 #define SHARED_REHASH	0x0400
-#define SHARED_DLINE	0x0800
+#define SHARED_TDLINE	0x0800
+#define SHARED_PDLINE	0x1000
+#define SHARED_UNDLINE	0x2000
 
 #define SHARED_ALL	(SHARED_TKLINE | SHARED_PKLINE | SHARED_UNKLINE |\
 			SHARED_PXLINE | SHARED_TXLINE | SHARED_UNXLINE |\
 			SHARED_TRESV | SHARED_PRESV | SHARED_UNRESV | \
-			SHARED_DLINE)
-#define CLUSTER_ALL	SHARED_ALL
+			SHARED_TDLINE | SHARED_PDLINE | SHARED_UNDLINE)
+#define CLUSTER_ALL	(SHARED_TKLINE | SHARED_PKLINE | SHARED_UNKLINE |\
+			SHARED_PXLINE | SHARED_TXLINE | SHARED_UNXLINE |\
+			SHARED_TRESV | SHARED_PRESV | SHARED_UNRESV )
 
 /* flags used in hub/leaf */
 #define CONF_HUB	0x0001
